package ma.newdev.rh.entity;

public enum LeaveStatus {
    EN_ATTENTE,
    APPROUVE,
    REFUSE,
    ANNULE
}
