@startuml NewDEV_RH_Class_M2_Leaves
' =====================================================================
' Module 2 — Congés & Absences
' 3 entités : LeaveType, LeaveBalance, LeaveRequest
' + 1 utilitaire de domaine : WorkingDayCalculator (logique métier critique)
'
' RÈGLE CRITIQUE (Maroc) :
'   - Semaine ouvrable : dimanche → jeudi
'   - Jours non ouvrés : vendredi + samedi
'   - JAMAIS samedi + dimanche (= bug du tutoriel générique)
' =====================================================================

title Module 2 — Congés & Absences

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam shadowing false

class Employee <<Entity>> #E8F5E9 {
  - id : Long
  - fullName : String
  - status : EmployeeStatus
}

class User <<Entity>> #E3F2FD {
  - id : Long
  - role : Role
}

class LeaveType <<Entity>> {
  - id : Long
  - name : String
  - annualQuotaDays : int
  - requiresJustification : boolean
  - isActive : boolean
}

class LeaveBalance <<Entity>> {
  - id : Long
  - year : int
  - totalDays : double
  - usedDays : double
  --
  + getRemainingDays() : double
  + canCover(days : double) : boolean
  + deduct(days : double) : void
  + adjust(newTotal : double) : void
}

class LeaveRequest <<Entity>> {
  - id : Long
  - startDate : LocalDate
  - endDate : LocalDate
  - workingDays : int
  - comment : String
  - status : LeaveStatus
  - decisionComment : String
  - decidedAt : LocalDateTime
  - submittedAt : LocalDateTime
  --
  + approve(decider : User, comment : String) : void
  + refuse(decider : User, comment : String) : void
  + cancel() : void
  + isPending() : boolean
  + overlapsWith(other : LeaveRequest) : boolean
}

class WorkingDayCalculator <<Service>> #FFECB3 {
  + countWorkingDays(start : LocalDate, end : LocalDate) : int
  - isWorkingDay(date : LocalDate) : boolean
}

enum LeaveStatus {
  EN_ATTENTE
  APPROUVE
  REFUSE
  ANNULE
}

' Relations
LeaveType "1" -- "0..*" LeaveBalance
Employee  "1" -- "0..*" LeaveBalance
LeaveType "1" -- "0..*" LeaveRequest
Employee  "1" -- "0..*" LeaveRequest : submitter >
User      "1" -- "0..*" LeaveRequest : decided by >

LeaveRequest --> LeaveStatus
LeaveRequest ..> WorkingDayCalculator : uses

note right of WorkingDayCalculator
  **Règle métier marocaine — testée en JUnit S4**
  isWorkingDay(d) =
    d.getDayOfWeek() != FRIDAY  &&
    d.getDayOfWeek() != SATURDAY

  Test obligatoire AVANT toute autre
  ligne de code du module congés.
end note

note bottom of LeaveRequest
  **Cycle de vie (état) :**
  EN_ATTENTE  → APPROUVE  (par Owner)
  EN_ATTENTE  → REFUSE    (par Owner)
  EN_ATTENTE  → ANNULE    (par Employé)

  **Contraintes :**
  - startDate doit être dans le futur
  - Pas de chevauchement avec une autre
    demande du même employé
  - workingDays ≤ solde disponible
    (vérifié SERVEUR, pas client)
  - Une demande APPROUVE ne peut plus
    être ANNULE par l'employé
end note

note bottom of LeaveBalance
  **Une ligne par (employé, type, année)**
  Mise à jour transactionnelle à
  l'approbation d'une demande :
    usedDays += request.workingDays

  RH peut ajuster manuellement via
  la méthode adjust() (ex : report
  de congés d'une année précédente).
end note

note left of LeaveType
  **Configurable par RH**
  Exemples typiques :
  - Congés payés (18 jours)
  - Maladie (jours illimités, justif requise)
  - Mariage / Décès (forfait)
  - Sans solde
end note

@enduml
